# pastoid

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_zh.md  index.html  package.json  quick-paste.html  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-04-21-in-app-update-download-plan.md  2026-05-20-shortcut-binding-plan.md
docs/superpowers/specs/: 2026-04-21-in-app-update-download-design.md  2026-05-20-shortcut-binding-design.md
src/: main-entry.tsx  quick-paste-entry.tsx  settings-entry.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: app.yml
src-tauri/src/: clipboard.rs  commands.rs  lib.rs  main.rs  models.rs  repository.rs  shortcut.rs  storage.rs  tray.rs
src/app/: MainApp.tsx  QuickPaste.tsx  SettingsApp.tsx
src/components/: ClipboardList.tsx  SearchBar.tsx  ShortcutRecordInput.tsx  index.ts
src/hooks/: useClipboard.ts
src/locales/: en.json  zh.json
src/pages/: Preferences.tsx
